app works as background service
Sends JSON if location has changed

--- a/GpsTracker.App/app/src/main/res/values/strings.xml
+++ b/GpsTracker.App/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">GpsTracker</string>
     <string name="simpleText">Простий текст</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_maps">GPS Tracker</string>
 </resources>
