--- a/GpsTracker.App/app/src/main/res/values/strings.xml
+++ b/GpsTracker.App/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">GpsTracker</string>
+    <string name="text_view_update_interval">Update Interval</string>
+    <string name="text_view_fatest_update">Fatest update</string>
+    <string name="text_view_displacement">Displacement</string>
+
     <string name="simpleText">Простий текст</string>
     <string name="title_activity_maps">GPS Tracker</string>
     <string name="title_activity_settings">Settings</string>
@@ -69,4 +73,5 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+    <string name="button_SettingsSave">Save</string>
 </resources>
