--- a/GpsTracker.App/app/src/main/res/values/strings.xml
+++ b/GpsTracker.App/app/src/main/res/values/strings.xml
@@ -26,18 +26,11 @@
     </string>
 
 
-
-
-
     <!-- User Settings -->
     <string name="pref_header_user">User</string>
 
     <string name="pref_title_login">Login</string>
     <string name="pref_title_password">Password</string>
-
-
-
-
 
 
     <!-- Person Settings -->
@@ -61,10 +54,8 @@
     <string name="pref_title_date_of_birth">Date of Birth</string>
 
 
-
     <string name="pref_title_email">Email</string>
     <string name="pref_title_phone">Phone</string>
-
 
 
     <string name="pref_title_new_message_notifications">New message notifications</string>
@@ -74,4 +65,7 @@
 
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="button_SettingsSave">Save</string>
+    <string name="auth_failed">Authorization has failed</string>
+    <string name="button_set_geofence">Set geofence</string>
+    <string name="button_set_geofence_">Set geofence for exit</string>
 </resources>
