--- a/GpsTracker.App/app/src/main/res/values/strings.xml
+++ b/GpsTracker.App/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GpsTracker</string>
+    <string name="app_name">FamilyTracker</string>
     <string name="text_view_update_interval">Update Interval</string>
     <string name="text_view_fatest_update">Fatest update</string>
     <string name="text_view_displacement">Displacement</string>
@@ -68,4 +68,20 @@
     <string name="auth_failed">Authorization has failed</string>
     <string name="button_set_geofence">Set geofence</string>
     <string name="button_set_geofence_">Set geofence for exit</string>
+
+
+    <string name="action_settings">Settings</string>
+    <string name="drawer_item_home">Home</string>
+    <string name="drawer_item_free_play">Free Play</string>
+    <string name="drawer_item_custom">Custom</string>
+    <string name="drawer_item_settings">Settings</string>
+    <string name="drawer_item_help">Help</string>
+    <string name="drawer_item_open_source">Open Source</string>
+    <string name="drawer_item_contact">Contact</string>
+    <string name="search_title">Search</string>
+    <string name="menu_item_map">Карта</string>
+    <string name="menu_item_settings">Налаштування</string>
+    <string name="view_navigation_open">Open</string>
+    <string name="view_navigation_close">Close</string>
+
 </resources>
